2005-11-14  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources: added new .NET 2.0 Decoder support types in
	  System.Text.

2005-11-06  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add System.IO/SearchOption.cs.

2005-11-05  Robert Jordan  <robertj@gmx.net>

	* corlib.dll.sources: Added System.Runtime.Remoting.Channels/ISecurableChannel.cs

2005-10-26  Zoltan Varga  <vargaz@gmail.com>

	* corlib.dll.sources: Add System.Runtime.InteropServices/IsCopyConstructed.cs.

	* corlib.dll.sources: Add/Remove some net 2.0 classes in System.Runtime.CompilerServices.

2005-10-25  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib_test.dll.sources : added System.Collections.ObjectModel/KeyedCollectionTest.cs.

2005-10-07  Zoltan Varga  <vargaz@gmail.com>

	* corlib.dll.sources: Add System.Runtime.CompilerServices/{RuntimeCompatibilityAttribute.cs, RuntimeWrappedException.cs}.

	* corlib_test.dll.sources: Add System/DelegateTest.cs

2005-08-13  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile (EXTRA_DISTFILES): Add resource files. Fixes #75794.

2005-08-10  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add System.Runtime.InteropServices/SafeHandle.cs
	and Microsoft.Win32.SafeHandles/SafeHandleZeroOrMinusOneIsInvalid.cs.

2005-08-09  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add System.Runtime.CompilerServices/SpecialNameAttribute.cs.

2005-08-08  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources : added managed collation classes
	* Makefile : added resources to build.
	* resources : new directory for collation table resources.

2005-08-06  Gert Driesen  <drieseng@users.sourceforge.net>

	* corlib.dll.sources: Added System.Runtime.InteropServices/
	TypeLibImportClassAttribute.cs.

2005-07-26  Zoltan Varga  <vargaz@freemail.hu>

	* corlib.dll.sources: Add System/StringSplitOptions.cs and System/MidpointRounding.cs.

2005-07-26  Raja R Harinath  <rharinath@novell.com>
