@@ -1,5 +1,5 @@
 //
-// DecoderFallbackException.cs
+// EncoderFallback.cs
 //
 // Author:
 //	Atsushi Enomoto <atsushi@ximian.com>
@@ -33,46 +33,28 @@
 namespace System.Text
 {
 	[Serializable]
-	public sealed class DecoderFallbackException : ArgumentException
+	public abstract class EncoderFallback
 	{
-		const string defaultMessage =
-			"Failed to decode the input byte sequence to Unicode characters.";
+		static EncoderFallback exception_fallback =
+			new EncoderExceptionFallback ();
+		static EncoderFallback replacement_fallback =
+			new EncoderReplacementFallback ();
 
-		public DecoderFallbackException ()
-			: this (null)
+		protected EncoderFallback ()
 		{
 		}
 
-		public DecoderFallbackException (string message)
-			: base (message)
-		{
+		public static EncoderFallback ExceptionFallback {
+			get { return exception_fallback; }
 		}
 
-		public DecoderFallbackException (string message, Exception innerException)
-			: base (message, innerException)
-		{
+		public abstract int MaxCharCount { get; }
+
+		public static EncoderFallback ReplacementFallback {
+			get { return replacement_fallback; }
 		}
 
-		public DecoderFallbackException (string message,
-			byte [] bytesUnknown, int index)
-			: base (message)
-		{
-			bytes_unknown = bytesUnknown;
-			this.index = index;
-		}
-
-		byte [] bytes_unknown;
-		int index = - 1;
-
-		[MonoTODO]
-		public byte [] BytesUnknown {
-			get { return bytes_unknown; }
-		}
-
-		[MonoTODO]
-		public int Index {
-			get { return index; }
-		}
+		public abstract EncoderFallbackBuffer CreateFallbackBuffer ();
 	}
 }
 
