@@ -1,5 +1,5 @@
 //
-// DecoderFallbackException.cs
+// EncoderFallbackBuffer.cs
 //
 // Author:
 //	Atsushi Enomoto <atsushi@ximian.com>
@@ -32,46 +32,26 @@
 
 namespace System.Text
 {
-	[Serializable]
-	public sealed class DecoderFallbackException : ArgumentException
+	public abstract class EncoderFallbackBuffer
 	{
-		const string defaultMessage =
-			"Failed to decode the input byte sequence to Unicode characters.";
-
-		public DecoderFallbackException ()
-			: this (null)
+		protected EncoderFallbackBuffer ()
 		{
 		}
 
-		public DecoderFallbackException (string message)
-			: base (message)
-		{
-		}
+		public abstract int Remaining { get; }
 
-		public DecoderFallbackException (string message, Exception innerException)
-			: base (message, innerException)
-		{
-		}
+		public abstract bool Fallback (char charUnknown, int index);
 
-		public DecoderFallbackException (string message,
-			byte [] bytesUnknown, int index)
-			: base (message)
-		{
-			bytes_unknown = bytesUnknown;
-			this.index = index;
-		}
+		public abstract bool Fallback (char charUnknownHigh, char charUnknownLow, int index);
 
-		byte [] bytes_unknown;
-		int index = - 1;
+		public abstract char GetNextChar ();
+
+		public abstract bool MovePrevious ();
 
 		[MonoTODO]
-		public byte [] BytesUnknown {
-			get { return bytes_unknown; }
-		}
-
-		[MonoTODO]
-		public int Index {
-			get { return index; }
+		public virtual void Reset ()
+		{
+			throw new NotImplementedException ();
 		}
 	}
 }
