@@ -1,5 +1,5 @@
 //
-// DecoderFallbackException.cs
+// EncoderReplacementFallback.cs
 //
 // Author:
 //	Atsushi Enomoto <atsushi@ximian.com>
@@ -33,45 +33,53 @@
 namespace System.Text
 {
 	[Serializable]
-	public sealed class DecoderFallbackException : ArgumentException
+	public sealed class EncoderReplacementFallback : EncoderFallback
 	{
-		const string defaultMessage =
-			"Failed to decode the input byte sequence to Unicode characters.";
-
-		public DecoderFallbackException ()
-			: this (null)
-		{
-		}
-
-		public DecoderFallbackException (string message)
-			: base (message)
-		{
-		}
-
-		public DecoderFallbackException (string message, Exception innerException)
-			: base (message, innerException)
-		{
-		}
-
-		public DecoderFallbackException (string message,
-			byte [] bytesUnknown, int index)
-			: base (message)
-		{
-			bytes_unknown = bytesUnknown;
-			this.index = index;
-		}
-
-		byte [] bytes_unknown;
-		int index = - 1;
-
 		[MonoTODO]
-		public byte [] BytesUnknown {
-			get { return bytes_unknown; }
+		public EncoderReplacementFallback ()
+			: this ("?")
+		{
 		}
 
 		[MonoTODO]
-		public int Index {
-			get { return index; }
+		public EncoderReplacementFallback (string replacement)
+		{
+			if (replacement == null)
+				throw new ArgumentNullException ();
+			// FIXME: check replacement validity (invalid surrogate)
+
+			this.replacement = replacement;
+		}
+
+		string replacement;
+
+		[MonoTODO]
+		public string DefaultString {
+			get { return replacement; }
+		}
+
+		[MonoTODO]
+		public override int MaxCharCount {
+			get { return replacement.Length; }
+		}
+
+		[MonoTODO]
+		public override EncoderFallbackBuffer CreateFallbackBuffer ()
+		{
+			return new EncoderReplacementFallbackBuffer (this);
+		}
+
+		[MonoTODO]
+		public override bool Equals (object value)
+		{
+			EncoderReplacementFallback f = value as EncoderReplacementFallback;
+			return f != null && replacement == f.replacement;
+		}
+
+		[MonoTODO]
+		public override int GetHashCode ()
+		{
+			return replacement.GetHashCode ();
 		}
 	}
 }
